--- a/students/sergi/index.html
+++ b/students/sergi/index.html
@@ -5,21 +5,22 @@
   <title>Hi, I'm Sergi!</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1>Hi, I'm Sergi!</h1>
-  <section class="profile">
+  <h1 class="container">Hi, I'm Sergi!</h1>
+  <section class="profile container">
     <h2>Profile</h2>
     <img src="images/ProfilePicture.jpg" alt="Sergi Llonch's profile image">
-    <p>Hi! I am an <b>Ironhacker</b> who joined the Web Development Bootcamp in Barcelona on October '18'. I am really excited for taking this life-changing course and knowing beforehand it would be really hard sometimes, I know that... <em>the best preparation for tomorrow is doing your best today.</em></p>
+    <p>Hi! I am an <b>Ironhacker</b> who joined the Web Development Bootcamp in Barcelona on October '18'. I am really excited for taking this life-changing course and knowing beforehand it would be really hard sometimes,  but I know that "<em>the best preparation for tomorrow is doing your best today</em>".</p>
   </section>
-  <section class="interests">
+  <section class="interests container">
     <h3>Interests:</h3>
     <ul>
       <li>Music</li>
-      <li class="list-item" id="list-item">Science</li>
-      <li class="list-item" id="list-item">Craft beers</li>
+      <li>Science</li>
+      <li>Craft beers</li>
     </ul>
     <h4>Idols:</h4>
     <ul>
@@ -28,10 +29,9 @@
       <li><a href="https://en.wikipedia.org/wiki/Alan_Turing">Alan Turing</a></li>
       <li><a href="https://en.wikipedia.org/wiki/Nikola_Tesla">Nikola Tesla</a></li>
       <li><a href="https://en.wikipedia.org/wiki/Albert_Einstein">Albert Einstein</a></li>
-      <li><a href="https://en.wikipedia.org/wiki/Francisco_Salva_Campillo">Francisco Salvá Campillo</a></li>
     </ul>
   </section>
-  <section class="experiments">
+  <section class="experiments container">
       <h2>Experiments</h2>
       <article class="card experiments">
         <header class="card-header">
